<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/hadi"
        android:layout_marginLeft="16sp"
        android:layout_marginTop="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/muhammad_hadi"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@id/profile_image"
        app:layout_constraintStart_toEndOf="@id/profile_image"
        />
    <TextView
        android:id="@+id/tvCity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:text="malakhadikhan@gmail.com"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvName"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint"
        android:layout_width="match_parent"
        app:dividerColor="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:layout_height="1dp"/>


    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:paddingBottom="10dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >

            <TextView
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/android_developer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                tools:ignore="MissingConstraints" />
            <TextView
                android:id="@+id/overView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/developer"
                android:text="As an Android developer, I have the skills and knowledge to develop applications for the Android operating system. I can create innovative and user-friendly mobile applications. "/>
            <TextView
                android:id="@+id/dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/overView"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/dec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/dev"
                android:text="I am Muhammad Hadi. I am from dir lower kpk pakistan. I completed my graduation from the university of Malakand in computer science.I am a hardworking, ambitious and energetic person. I have a clear, logical mind with a practical approach to problem-solving and a drive to see things through to completion. I am eager to learn, I enjoy overcoming challenges. My greatest passion is in life is using my technical know-how to benefit other people and organizations."/>
            <TextView
                android:id="@+id/Education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/dec"
                android:text="Education"/>
            <TextView
                android:id="@+id/Education2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/Education"
                android:text="Bachelor of Science:\nComputerScience 2018-22 from University of Malakand"/>
            <TextView
                android:id="@+id/Skills"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/Education2"
                android:text="Skills"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingLeft="16sp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/Skills">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/Education2"
                    android:text="->Native development"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/Education2"
                    android:text="->Flutter"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/Education2"
                    android:text="->Firebase Database"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/Education2"
                    android:text="->API"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/Education2"
                    android:text="->SQL"/>

            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    


</androidx.constraintlayout.widget.ConstraintLayout>